--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -243,6 +243,8 @@ ul.stories li .details .comments { padding-right: 10px; background: url(../image
 
 a.story_action { display: block; width: 197px; background-image: url(../images/story_action_buttons.png); height: 37px; text-indent: -9999px; }
 
+a.story_action span { display: block; width: 100%; height: 100%; }
+
 a.story_action.start { background-position: 0 -148px; }
 
 a.story_action.start:active { background-position: 0 -185px; }
@@ -254,6 +256,26 @@ a.story_action.archive:active { background-position: 0 -111px; }
 a.story_action.finish { background-position: 0 0px; }
 
 a.story_action.finish:active { background-position: 0 -37px; }
+
+/* Buttons/Disabled */
+
+a.story_action.finish.disabled { background-position: -200px 0; }
+
+a.story_action.finish.disabled:active { background-position: -200 -37px; }
+
+a.story_action.finish.disabled span { background: url(../images/button_loader_finish.gif) no-repeat 170px center; }
+
+a.story_action.start.disabled { background-position: -200px -148px; }
+
+a.story_action.start.disabled:active { background-position: -200 -185px; }
+
+a.story_action.start.disabled span { background: url(../images/button_loader_start.gif) no-repeat 170px center; }
+
+a.story_action.archive.disabled { background-position: -200px -74px; }
+
+a.story_action.archive.disabled:active { background-position: -200 -111px; }
+
+a.story_action.archive.disabled span { background: url(../images/button_loader_archive.gif) no-repeat 170px center; }
 
 
 
