--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -60,6 +60,8 @@ ul.simple { list-style-type: none; padding: 0px; margin: 0px; }
 
 h1, h2, h3 { font: 14px 'MentoneSemiBold', 'Lucida Grande'; }
 
+h2 { color: #0d4eb3; font-size: 16px; text-shadow: #fff 0 1px 0; }
+
 h3 { color: #4a4f57; text-shadow: #fff 0 1px 0; }
 
 p.description { color: #808080; }
@@ -317,6 +319,32 @@ a.button.small.disabled span { background-position: 0 -100px; color: #9e9fa2; te
 /* @end */
 
 /* @group Time Tracker */
+
+
+
+/* @end */
+
+/* @group Forms */
+
+form.formtastic fieldset { border: none; padding-top: 0px; padding-bottom: 0px; }
+
+form.formtastic ol { list-style-type: none; padding: 0px; }
+
+form.formtastic label { border: none; font-size: 12px; color: #5c5c5c; font-weight: normal; display: block; width: 150px; float: left; padding-top: 16px; }
+
+form.formtastic li.select label { padding-top: 7px; }
+
+form.formtastic fieldset.inputs input, form.formtastic textarea { color: #232323; font-size: 14px; font-weight: bold; padding: 10px; border: 1px solid #c6c6c6; background: #fff url(../images/input_background.png) repeat-x; -webkit-box-shadow: #f8f8f8 0px 1px 0px; -moz-box-shadow: #f8f8f8 0px 1px 0px; }
+
+form.formtastic textarea { font-size: 12px; height: 100px; }
+
+form.formtastic select { font-size: 14px; }
+
+form.formtastic li.commit input { background: transparent url(../images/submit_button_background.png) no-repeat; border: none; padding: 12px; width: 136px; color: #fff; font: normal normal 13px MentoneSemiBold; text-transform: uppercase; text-shadow: #2f558e 0 1px 0; cursor: pointer; }
+
+form.formtastic li.commit { margin-left: 150px; }
+
+form.formtastic li.commit input:active { background-position: 0 -50px; }
 
 
 
