[Finished: #4926002] Fellow views stories from icebox

--- a/app/views/stories/_filter.html.haml
+++ b/app/views/stories/_filter.html.haml
@@ -8,6 +8,8 @@
           Current
         %a.tab.filter{:href => "#", :"data-state" => "upcoming"}
           Upcoming
+        %a.tab.filter{:href => "#", :"data-state" => "new"}
+          New
     .fr
       #type_filter.clearfix
         %a.tab.filter{:href => "#", :"data-type" => "feature"}
