[Finished: #4934078] Fellow changes state from new to upcoming

--- a/app/views/stories/_inspector.html.haml
+++ b/app/views/stories/_inspector.html.haml
@@ -9,6 +9,9 @@
     - if @story.state == "done"
       %a{:href => "#", :class => "story_action archive", :"data-state" => 'archived'}
         %span Move to archive
+    - if @story.state == "new"
+      %a{:href => "#", :class => "story_action schedule", :"data-state" => "upcoming"}
+        %span Mark as upcoming
 
   
   - form_for [@project, @story], :html => {:class => "story"} do |f|
