--- a/app/views/stories/_story.html.haml
+++ b/app/views/stories/_story.html.haml
@@ -1,6 +1,8 @@
 %li{:class => "story #{story.state} #{story.type}", :id => "story_#{story.id}", :"data-path" => project_story_path(@project, story), :"data-state" => story.state, :"data-type" => story.type, :"data-id" => story.id, :"data-order" => story._collection_order}
   .content.clearfix
     .sort_handle
+    .delete_button
+      %a{:href => "#"} Delete
     .name
       = story.name
     .details.clearfix
